<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">WhatsToDo</string>
    <string name="menu_settings">Settings</string>
    <string name="link">You are new to "WhatsToDo"? Sign in here!</string>
    <string name="settings">Settings</string>
    <string name="my_todos">My ToDos</string>
    <string name="todo">ToDo</string>
    <string name="content">Content</string>
    <string name="date">Date</string>
    <string name="time">Time</string>
    <string name="important">Important!</string>
    <string name="important2">!!!</string>
    <string name="done">Done</string>
    <string name="name">Name</string>
    <string name="surname">Surname</string>
    <string name="email">E-Mail</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="login">Login</string>
    <string name="register">Sign In</string>
    <string name="registration">Registration</string>
    <string name="save">Save</string>
    <string name="add">Add</string>
    <string name="delete">Delete</string>
    <string name="delete_all">Delete All</string>
    <string name="valid_email">Example: user@example.com</string>
    <string name="valid_pass">Password (only numbers, at least 6)</string>

</resources>