<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/todolist_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".TodolistActivity" >

    <TextView
        android:id="@+id/label_todolist"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="7dp"
        android:text="@string/app_name"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="#FFDDDDDD" />

    <EditText
        android:id="@+id/todolist_edit_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/label_todolist"
        android:layout_marginTop="6dp"
        android:ems="12"
        android:hint="@string/name"
        android:singleLine="true" >

        <requestFocus />
    </EditText>

    <Button
        android:id="@+id/addBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/todolist_edit_name"
        android:text="@string/add" />

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/addBtn" >

        <include
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            layout="@layout/listview" />

        <TextView
            android:id="@+id/label_important"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="15dp"
            android:text="@string/important2"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="#FFFF0000" />

        <TextView
            android:id="@+id/label_done"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:layout_marginRight="10dp"
            android:text="@string/done"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="#FFDDDDDD" />
    </RelativeLayout>

    <Button
        android:id="@+id/deleteAllBtn"
        android:layout_width="wrap_content"
        android:layout_height="35dp"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="5dp"
        android:text="@string/delete_all"
        android:textSize="10sp" />

</RelativeLayout>