<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/details_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".TodoDetailsActivity" >

    <EditText
        android:id="@+id/details_edit_content"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/date_Btn"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/label_content"
        android:gravity="left|top"
        android:hint="@string/content"
        android:imeOptions="actionDone"
        android:inputType="textMultiLine"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/label_done"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:layout_marginRight="3dp"
        android:text="@string/done"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textColor="#FFDDDDDD" />

    <Button
        android:id="@+id/delete_Btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:text="@string/delete" />

    <Button
        android:id="@+id/save_Btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/delete_Btn"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:text="@string/save" />

    <Button
        android:id="@+id/date_Btn"
        android:layout_width="160dp"
        android:layout_height="wrap_content"
        android:layout_above="@+id/save_Btn"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:text="@string/date" />

    <TextView
        android:id="@+id/label_content"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/details_check_important"
        android:text="@string/content"
        android:textColor="#FFDDDDDD" />

    <CheckBox
        android:id="@+id/details_check_done"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/label_done" />

    <CheckBox
        android:id="@+id/details_check_important"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/details_check_done"
        android:layout_alignBottom="@+id/details_check_done"
        android:layout_toLeftOf="@+id/details_check_done" />

    <TextView
        android:id="@+id/label_important"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/details_check_important"
        android:layout_alignLeft="@+id/details_check_important"
        android:layout_marginLeft="12dp"
        android:text="@string/important2"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textColor="#FFFF0000" />

    <EditText
        android:id="@+id/details_edit_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/details_check_important"
        android:layout_alignBottom="@+id/details_check_important"
        android:layout_alignParentLeft="true"
        android:layout_toLeftOf="@+id/details_check_important"
        android:ems="10"
        android:hint="@string/name"
        android:singleLine="true" >

        <requestFocus />
    </EditText>

    <TextView
        android:id="@+id/label_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:text="@string/name"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textColor="#FFDDDDDD" />

</RelativeLayout>