<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <RelativeLayout
        android:id="@+id/login_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".LoginActivity" >

        <TextView
            android:id="@+id/label_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/login_edit_email"
            android:layout_centerHorizontal="true"
            android:text="@string/password"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="#FFDDDDDD" />

        <EditText
            android:id="@+id/login_edit_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/label_email"
            android:layout_centerHorizontal="true"
            android:ems="12"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:singleLine="true" />

        <EditText
            android:id="@+id/login_edit_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/login_edit_email"
            android:layout_below="@+id/label_password"
            android:ems="12"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:singleLine="true" />

        <Button
            android:id="@+id/login_Btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/login_edit_password"
            android:layout_alignRight="@+id/login_edit_password"
            android:layout_below="@+id/login_edit_password"
            android:layout_marginTop="20dp"
            android:text="@string/login" />

        <TextView
            android:id="@+id/label_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="64dp"
            android:text="@string/email"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="#FFDDDDDD" />

        <TextView
            android:id="@+id/label_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:text="@string/login"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="#FFDDDDDD" />

        <TextView
            android:id="@+id/link_to_register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentRight="true"
            android:layout_below="@+id/login_Btn"
            android:layout_marginTop="32dp"
            android:gravity="center"
            android:text="@string/link"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="#FF00FFFF" />
    </RelativeLayout>

</ScrollView>